# solanin

./: .gitignore  LICENSE  README  TODO  index.html  solanin.cabal
src/: Main.hs
src/Solanin/: Data.hs  Playlist.hs  Server.hs  Song.hs  State.hs  TagLib.chs  Validate.hs
src/Solanin/Server/: File.hs  Handler.hs  StringTemplate.hs  Util.hs
static/css/: config.css  login.css  player.css  setup.css
static/js/: login.js  player.js  rebuildindex.js  refreshindex.js
templates/: config.st  configForm.st  login.st  password.st  passwordForm.st  player.st  playlist.st  rebuildIndex.st  rebuildIndexConfirm.st  rebuildIndexConfirmForm.st  rebuildIndexProgress.st  refreshIndexProgress.st
