Name:          solanin
Version:       0.2.2
Cabal-Version: >= 1.6
License:       PublicDomain
License-File:  LICENSE
Author:        Shu-yu Guo <shu@rfrn.org>
Homepage:      http://github.com/syg/solanin
Synopsis:      Web music streamer
Category:      Web
Build-Type:    Simple
Data-Files:
  static/css/*.css
  static/img/*.png
  static/js/*.js
  static/js/jquery.color.js
  static/js/jquery.event.drag.js
  static/swf/*.swf
  templates/*.st

Executable solanin
  Build-Depends:
    base                 == 4.*,
    stm,
    containers,
    directory,
    process,
    filepath,
    random,
    mtl                  >= 1 && < 1.2,
    parsec               >= 2.1.0.0 && < 3.0.0,
    old-time,
    old-locale,
    binary,
    zlib,
    bytestring,
    bytestring-trie      >= 0.2.1,
    network,
    utf8-string,
    hyena                == 0.1,
    MaybeT,
    SHA,
    HStringTemplate,
    json

  Main-Is:               Main.hs
  Hs-Source-Dirs:        src
  Build-Tools:           c2hs > 0.15
  Extra-Libraries:       tag_c
  pkgconfig-depends:     taglib_c
  Other-Modules:         Solanin.TagLib

  GHC-Options:
    -O2 -Wall -fno-warn-orphans -fno-warn-missing-signatures
